terraform/VPC.tf
resource "aws_security_group" "here-listen-sg" {
  name        = "here-listen-sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_default_vpc.default.id

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  # Allow all traffic to flow inbound at the current secruity group
  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "here-listen-sg"
  }
}


//DEFAULT SUBNET US-EAST-1A
resource "aws_default_subnet" "default_us-east-1a" {
  availability_zone = "us-east-1a"

  tags = {
    Name = "Default subnet for us-west-1a"
  }
}
//DEFAULT SUBNET US-EAST-1B
resource "aws_default_subnet" "default_us-east-1b" {
  availability_zone = "us-east-1b"

  tags = {
    Name = "Default subnet for us-west-1b"
  }
}

resource "aws_default_vpc" "default" {
  tags = {
    Name = "Default VPC"
  }
}
//DEFAULT SECURITY GROUP
resource "aws_default_security_group" "default" {
  vpc_id = aws_default_vpc.default.id

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
